Fixing slider popup label 1 pixel gap
- Decorate popup container to have rounded rectangle with background
color.

DCO-1.1-Signed-Off-By: Kunmyon Choi <kunmyon.choi@lge.com>

--- a/css/Slider.less
+++ b/css/Slider.less
@@ -56,6 +56,7 @@
 		right: 50%;
 	}
 	direction: ltr;
+	border-radius: 30px;
 }
 .moon-slider-popup-left {
   position: relative;
